# transformers-research-projects

./: README.md
kv-cache-quantization/: .gitignore  LICENSE  README.md  demo.ipynb  eval_long_bench.py  example.py  example_offline.py  matheval.py  mem_spd_test.py  my_pred_long_bench.py  my_test_math500.py  my_test_math500_offline.py  pyproject.toml
kv-cache-quantization/models/: llama_kivi.py  llama_squat.py  mistral_kivi.py  mistral_squat.py
kv-cache-quantization/quant/: gemv.py  matmul.py  new_pack.py  setup.py
kv-cache-quantization/quant/csrc/: gemv_cuda.cu  gemv_cuda.h  pybind.cpp
kv-cache-quantization/utils/: data.py  process_args.py
rag/: README.md  feast_retriever.py  requirements.txt
rag-end2end-retriever/: README.md
transformers_distillation/: README.md  pyproject.toml  requirements.txt  setup.py
transformers_distillation/examples/: CausalLM.ipynb  CausalLM.py  MLM.ipynb  MLM.py  Seq2SeqLM.ipynb  Seq2SeqLM.py
transformers_distillation/src/transformers_distillation/: __init__.py  configs.py  models.py  trainer.py  utils.py
transformers_distillation/tests/: test_MLM.py  test_Seq2SeqLM.py
