[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers_distiller"
version = "0.1.0"
description = "A Hugging Face model distillation trainer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dhiraj Patil", email = "patildhiraj1197@gmail.com"}
]
dependencies = [
    "torch>=2.0.0",
    "transformers==4.55.2",
    "datasets==4.0.0",
    "accelerate==1.10.0",
    "bitsandbytes==0.47.0",
    "huggingface-hub==0.34.4",
    "safetensors==0.6.2",
    "numpy>=2.1.2",
    "pandas>=2.3.1",
    "tqdm>=4.67.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]

where = ["src"]
